resolved login issue by using curl